<resources>
    <string name="app_name">برنامه ریز کن</string>

    <string name="text_title_login_description">لوگو اپلیکیشن</string>
    <string name="text_title_login_name">ورود</string>
    <string name="text_title_login_username">نام کاربری</string>
    <string name="text_title_login_password">رمز عبور</string>
    <string name="text_title_login_login">ورود</string>
    <string name="text_title_login_forget">نام کاربری و رمز عبور رو فراموش کردم؟</string>
    <string name="text_title_login_register">عضو نیستید؟ ثبت نام</string>

    <string name="text_title_register_name">عضویت</string>
    <string name="text_title_register_firstname">نام</string>
    <string name="text_title_register_lastname">نام خانوادگی</string>
    <string name="text_title_register_username">نام کاربری</string>
    <string name="text_title_register_password">رمز عبور</string>
    <string name="text_title_register_retype_password">تکرار رمز عبور</string>
    <string name="text_title_register_word_security">کلمه امنیتی</string>
    <string name="text_title_register_register">عضویت</string>

    <string name="text_title_forget_name">فراموشی رمز</string>
    <string name="text_title_forget_firstname">نام</string>
    <string name="text_title_forget_lastname">نام خانوادگی</string>
    <string name="text_title_forget_word_security">کلمه امنیتی</string>
    <string name="text_title_forget_forget">فراموشی رمز</string>

    <string-array name="state">
        <item>پایین</item>
        <item>متوسط</item>
        <item>بالا</item>
    </string-array>

    <string-array name="part">
        <item>کار های من</item>
        <item>در حال انجام</item>
        <item>کار های تکمیل شده</item>
    </string-array>

</resources>